Renaming: Don't select unknown extensions

If a file with an unknown extension gets renamed, it is assumed
that the letters after the last point represent the extension and
won't be selected.

BUG: 301893
FIXED-IN: 4.9.0